@@ -5,6 +5,9 @@ What's New for OpenJPIP
 ! : changed
 + : added
 
+January 26, 2011
+! [kaori] unapplied auxtrans_manager to the local mode
+
 December 24, 2011
 * [kaori] additional modification for the warning
 
